<resources>
    <string name="app_name">Individual18_Mod5</string>
    <string name="ingrese_nro_entero">Ingrese Nro Entero</string>
    <string name="textview">TextView</string>
    <string name="ingrese_texto">Ingrese Texto</string>
    <string name="textview2">TextView</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="ingrese_nro_decimal">Ingrese Nro Decimal</string>
    <string name="textview3">TextView</string>
    <string name="borrar">BORRAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="mostrar">MOSTRAR</string>
    <string name="textview4">TextView</string>
</resources>